--- a/mainpage.html
+++ b/mainpage.html
@@ -9,7 +9,7 @@
   <body>
     <nav>
       <div class="nav-wrapper">
-        <a class="logo" href="mainpage.html">Главная</a>
+        <img src="img/logo.png" alt="GalaxyMuseum" class="logo" />
         <a href="aboutus.html">О нас</a>
         <a href="events.html">События</a>
         <a href="news.html">Новости</a>
