--- a/mainpage.html
+++ b/mainpage.html
@@ -5,17 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Главная</title>
     <link rel="stylesheet" href="stylesheets/style.css" />
+
   </head>
   <body>
     <nav>
       <div class="nav-wrapper">
-        <img src="img/logo.png" alt="GalaxyMuseum" class="logo" />
-        <a href="aboutus.html">О нас</a>
+        <img src="img/logo.png" alt="GalaxyMuseumLogo" class="logo" />
+        <a href="news.html">Новости</a> 
         <a href="events.html">События</a>
-        <a href="news.html">Новости</a>
         <a href="tickets.html">Билеты</a>
-
-        <h1>Главная</h1>
+        <a href="aboutus.html">О нас</a>
       </div>
     </nav>
   </body>
