nav-wrapper3 logo all

--- a/tickets.html
+++ b/tickets.html
@@ -3,19 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Билеты</title>
+    <title>Главная</title>
     <link rel="stylesheet" href="stylesheets/style.css" />
   </head>
   <body>
     <nav>
       <div class="nav-wrapper">
-        <a class="logo" href="mainpage.html">Главная</a>
-        <a href="aboutus.html">О нас</a>
-        <a href="events.html">События</a>
+        <img src="img/logo.png" alt="GalaxyMuseumLogo" class="logo" />
         <a href="news.html">Новости</a>
+        <a href="events.html">События</a>
         <a href="tickets.html">Билеты</a>
-
-        <h1>Билеты</h1>
+        <a href="aboutus.html">О нас</a>
       </div>
     </nav>
   </body>
