--- a/mainpage.html
+++ b/mainpage.html
@@ -9,11 +9,15 @@
   <body>
     <nav>
       <div class="nav-wrapper">
-        <img src="img/logo.png" alt="GalaxyMuseumLogo" class="logo" />
-        <a href="news.html">Новости</a>
-        <a href="events.html">События</a>
-        <a href="tickets.html">Билеты</a>
-        <a href="aboutus.html">О нас</a>
+        <a href="mainpage.html">
+          <img src="img/logo.png" alt="GalaxyMuseumLogo" class="nav-logo" />
+        </a>
+        <ul class="nav-list">
+          <a href="news.html">Новости</a>
+          <a href="events.html">События</a>
+          <a href="tickets.html">Билеты</a>
+          <a href="aboutus.html">О нас</a>
+        </ul>
       </div>
     </nav>
   </body>
