--- a/mainpage.html
+++ b/mainpage.html
@@ -8,17 +8,18 @@
   </head>
   <body>
     <nav>
-      <div class="nav-wrapper">
-        <a href="mainpage.html">
+      <ul class="nav-wrapper">
+        <li class="logonavwrapper">
+         <a href="mainpage.html">
           <img src="img/logo.png" alt="GalaxyMuseumLogo" class="nav-logo" />
-        </a>
+         </a>
+        </li>
         <ul class="nav-list">
           <a href="news.html">Новости</a>
           <a href="events.html">События</a>
           <a href="tickets.html">Билеты</a>
           <a href="aboutus.html">О нас</a>
         </ul>
-      </div>
     </nav>
   </body>
 </html>
