--- a/mainpage.html
+++ b/mainpage.html
@@ -15,10 +15,10 @@
          </a>
         </li>
         <ul class="nav-list">
-          <a href="news.html">Новости</a>
-          <a href="events.html">События</a>
-          <a href="tickets.html">Билеты</a>
-          <a href="aboutus.html">О нас</a>
+          <li><a href="news.html">Новости</a></li>
+          <li></li><a href="events.html">События</a></li>
+          <li></li><a href="tickets.html">Билеты</a></li>
+          <li><a href="aboutus.html">О нас</a></li>
         </ul>
     </nav>
   </body>
