--- a/mainpage.html
+++ b/mainpage.html
@@ -7,19 +7,27 @@
     <link rel="stylesheet" href="stylesheets/style.css" />
   </head>
   <body>
-    <nav>
-      <ul class="nav-wrapper">
+
+
+   <header>
+     <div class="navbar">
+
         <li class="logonavwrapper">
-         <a href="mainpage.html">
-          <img src="img/logo.png" alt="GalaxyMuseumLogo" class="nav-logo" />
-         </a>
+          <a href="mainpage.html">
+           <img src="img/logo.png" alt="GalaxyMuseumLogo" class="nav-logo" />
+          </a>
         </li>
+
         <ul class="nav-list">
           <li><a href="news.html">Новости</a></li>
           <li></li><a href="events.html">События</a></li>
           <li></li><a href="tickets.html">Билеты</a></li>
           <li><a href="aboutus.html">О нас</a></li>
         </ul>
-    </nav>
+
+    </div>
+   </header>
+
+
   </body>
 </html>
