--- a/mainpage.html
+++ b/mainpage.html
@@ -7,27 +7,14 @@
     <link rel="stylesheet" href="stylesheets/style.css" />
   </head>
   <body>
-
-
-   <header>
-     <div class="navbar">
-
-        <li class="logonavwrapper">
-          <a href="mainpage.html">
-           <img src="img/logo.png" alt="GalaxyMuseumLogo" class="nav-logo" />
-          </a>
-        </li>
-
-        <ul class="nav-list">
-          <li><a href="news.html">Новости</a></li>
-          <li></li><a href="events.html">События</a></li>
-          <li></li><a href="tickets.html">Билеты</a></li>
-          <li><a href="aboutus.html">О нас</a></li>
-        </ul>
-
-    </div>
-   </header>
-
-
+    <nav>
+      <div class="nav-wrapper">
+        <img src="img/logo.png" alt="GalaxyMuseumLogo" class="logo" />
+        <a href="news.html">Новости</a>
+        <a href="events.html">События</a>
+        <a href="tickets.html">Билеты</a>
+        <a href="aboutus.html">О нас</a>
+      </div>
+    </nav>
   </body>
 </html>
