--- a/mainpage.html
+++ b/mainpage.html
@@ -8,11 +8,18 @@
   </head>
   <body>
     <nav class="nav-wrapper">
-      <img src="img/logo.png" alt="GalaxyMuseumLogo" class="logo" />
-      <a href="news.html">Новости</a>
-      <a href="events.html">События</a>
-      <a href="tickets.html">Билеты</a>
-      <a href="aboutus.html">О нас</a>
+      <ul class="nav-list">
+        <li class="logopic">
+          <a href="mainpage.html">
+            <img src="img/logo.png" alt="логотип" class="nav-logo" />
+          </a>
+        </li>
+
+        <a href="news.html">Новости</a>
+        <a href="events.html">События</a>
+        <a href="tickets.html">Билеты</a>
+        <a href="aboutus.html">О нас</a>
+      </ul>
     </nav>
   </body>
 </html>
