--- a/mainpage.html
+++ b/mainpage.html
@@ -15,10 +15,10 @@
           </a>
         </li>
 
-        <a href="news.html">Новости</a>
-        <a href="events.html">События</a>
-        <a href="tickets.html">Билеты</a>
-        <a href="aboutus.html">О нас</a>
+        <a href="news.html">НОВОСТИ</a>
+        <a href="events.html">СОБЫТИЯ</a>
+        <a href="tickets.html">БИЛЕТЫ</a>
+        <a href="aboutus.html">О НАС</a>
       </ul>
     </nav>
   </body>
