--- a/mainpage.html
+++ b/mainpage.html
@@ -11,7 +11,7 @@
       <ul class="nav-list">
         <li class="logopic">
           <a href="mainpage.html">
-            <img src="img/logo11.png" alt="логотип" class="nav-logo" />
+            <img src="img/logo12.svg" alt="логотип" class="nav-logo" />
           </a>
         </li>
 
