--- a/mainpage.html
+++ b/mainpage.html
@@ -8,17 +8,19 @@
   </head>
   <body>
     <nav class="nav-wrapper">
-      <ul class="nav-list">
+      <ul class="nav-listone">
         <li class="logopic">
           <a href="mainpage.html">
             <img src="img/logo12.svg" alt="логотип" class="nav-logo" />
           </a>
         </li>
+      </ul>
 
-        <a href="news.html">НОВОСТИ</a>
-        <a href="events.html">СОБЫТИЯ</a>
-        <a href="tickets.html">БИЛЕТЫ</a>
-        <a href="aboutus.html">О НАС</a>
+      <ul class="nav-listtwo">
+        <li><a href="news.html">НОВОСТИ</a></li>
+        <li><a href="events.html">СОБЫТИЯ</a></li>
+        <li><a href="tickets.html">БИЛЕТЫ</a></li>
+        <li><a href="aboutus.html">О НАС</a></li>
       </ul>
     </nav>
   </body>
