--- a/mainpage.html
+++ b/mainpage.html
@@ -7,21 +7,16 @@
     <link rel="stylesheet" href="stylesheets/style.css" />
   </head>
   <body>
-    <nav class="nav-wrapper">
-      <ul class="nav-listone">
-        <li class="logopic">
-          <a href="mainpage.html">
-            <img src="img/logo12.svg" alt="логотип" class="nav-logo" />
-          </a>
-        </li>
-      </ul>
-
-      <ul class="nav-listtwo">
-        <li><a href="news.html">НОВОСТИ</a></li>
-        <li><a href="events.html">СОБЫТИЯ</a></li>
-        <li><a href="tickets.html">БИЛЕТЫ</a></li>
-        <li><a href="aboutus.html">О НАС</a></li>
-      </ul>
-    </nav>
+    <div class="nav-wrapper">
+      <a class="logo" href="mainpage.html">
+        <img src="img/logo12.svg" alt="логотип" />
+      </a>
+      <div class="pagenames">
+        <a class="newsname" href="news.html">НОВОСТИ</a>
+        <a class="eventsname" href="events.html">СОБЫТИЯ</a>
+        <a class="ticketsname" href="tickets.html">БИЛЕТЫ</a>
+        <a class="aboutusname" href="aboutus.html">О НАС</a>
+      </div>
+    </div>
   </body>
 </html>
