--- a/mainpage.html
+++ b/mainpage.html
@@ -7,16 +7,18 @@
     <link rel="stylesheet" href="stylesheets/style.css" />
   </head>
   <body>
-    <div class="nav-wrapper">
-      <a class="logo" href="mainpage.html">
-        <img src="img/logo12.svg" alt="логотип" />
-      </a>
-      <div class="pagenames">
-        <a class="newsname" href="news.html">НОВОСТИ</a>
-        <a class="eventsname" href="events.html">СОБЫТИЯ</a>
-        <a class="ticketsname" href="tickets.html">БИЛЕТЫ</a>
-        <a class="aboutusname" href="aboutus.html">О НАС</a>
-      </div>
-    </div>
+    <section class="nav-wrapper">
+      <div class="nav-list">
+        <a class="logo" href="mainpage.html">
+        <img class="logo1" src="logo12.svg" alt="логотип" />
+        </a>
+        <div class="pagenames">
+          <a href="news.html" class="newsname">НОВОСТИ</a>
+          <a href="events.html" class="eventsname">СОБЫТИЯ</a>
+          <a href="tickets.html" class="ticketsname" href="tickets.html">БИЛЕТЫ</a>
+          <a href="aboutus.html" class="aboutusname">О НАС</a>
+       </div>
+     </div>
+   </section>
   </body>
 </html>
