--- a/mainpage.html
+++ b/mainpage.html
@@ -15,9 +15,7 @@
         <div class="pagenames">
           <a href="news.html" class="newsname">НОВОСТИ</a>
           <a href="events.html" class="eventsname">СОБЫТИЯ</a>
-          <a href="tickets.html" class="ticketsname" href="tickets.html"
-            >БИЛЕТЫ</a
-          >
+          <a href="tickets.html" class="ticketsname">БИЛЕТЫ</a>
           <a href="aboutus.html" class="aboutusname">О НАС</a>
         </div>
       </div>
