--- a/tickets.html
+++ b/tickets.html
@@ -7,14 +7,18 @@
     <link rel="stylesheet" href="stylesheets/style.css" />
   </head>
   <body>
-    <nav>
-      <div class="nav-wrapper">
-        <img src="img/logo.png" alt="GalaxyMuseumLogo" class="logo" />
-        <a href="news.html">Новости</a>
-        <a href="events.html">События</a>
-        <a href="tickets.html">Билеты</a>
-        <a href="aboutus.html">О нас</a>
+    <section class="nav-wrapper">
+      <div class="nav-list">
+        <a class="logo" href="mainpage.html">
+          <img class="logo1" src="img/logo12.svg" alt="логотип" />
+        </a>
+        <div class="pagenames">
+          <a href="news.html" class="newsname">НОВОСТИ</a>
+          <a href="events.html" class="eventsname">СОБЫТИЯ</a>
+          <a href="tickets.html" class="ticketsname">БИЛЕТЫ</a>
+          <a href="aboutus.html" class="aboutusname">О НАС</a>
+        </div>
       </div>
-    </nav>
+    </section>
   </body>
 </html>
