--- a/events.html
+++ b/events.html
@@ -14,7 +14,7 @@
         </a>
         <div class="pagenames">
           <a href="news.html" class="newsname">НОВОСТИ</a>
-          <a href="events.html" class="eventsname">СОБЫТИЯ</a>
+          <a href="events.html" class="eventsnameevents">СОБЫТИЯ</a>
           <a href="tickets.html" class="ticketsname">БИЛЕТЫ</a>
           <a href="aboutus.html" class="aboutusname">О НАС</a>
         </div>
