--- a/news.html
+++ b/news.html
@@ -13,7 +13,7 @@
           <img class="logo1" src="img/logo12.svg" alt="логотип" />
         </a>
         <div class="pagenames">
-          <a href="news.html" class="newsname">НОВОСТИ</a>
+          <a href="news.html" class="newsnamenews">НОВОСТИ</a>
           <a href="events.html" class="eventsname">СОБЫТИЯ</a>
           <a href="tickets.html" class="ticketsname">БИЛЕТЫ</a>
           <a href="aboutus.html" class="aboutusname">О НАС</a>
