--- a/aboutus.html
+++ b/aboutus.html
@@ -16,7 +16,7 @@
           <a href="news.html" class="newsname">НОВОСТИ</a>
           <a href="events.html" class="eventsname">СОБЫТИЯ</a>
           <a href="tickets.html" class="ticketsname">БИЛЕТЫ</a>
-          <a href="aboutus.html" class="aboutusname">О НАС</a>
+          <a href="aboutus.html" class="aboutusnameaboutus">О НАС</a>
         </div>
       </div>
     </section>
