--- a/mainpage.html
+++ b/mainpage.html
@@ -20,5 +20,23 @@
         </div>
       </div>
     </section>
+    <section class="firstmain">
+      <div class="textmain-1">
+        <p class="titlemain1">Космос ближе,<br />чем кажется</p>
+      </div>
+    </section>
+    <section class="imagein1">
+      <img
+        class="main1-1"
+        src="img/modern-space-exploration-exhibition- (3) (1).png"
+        alt=""
+      />
+
+      <img class="arrow1mainleft" src="img/arrowmain1right.png" alt="" />
+      <img class="arrow1mainright" src="img/arrowmain1left.png" alt="" />
+      <div class="dscrpt1main">
+        <p class="decriptmain1-1">Зал «История космонавтики»</p>
+      </div>
+    </section>
   </body>
 </html>
