--- a/mainpage.html
+++ b/mainpage.html
@@ -24,6 +24,19 @@
       <div class="textmain-1">
         <p class="titlemain1">Космос ближе,<br />чем кажется</p>
       </div>
+      <div class="textmain-2">
+        <p class="textmain2">
+          Галактика — музей-портал в неизведанное.<br /><br />
+          Наши экспозиции — это путешествие сквозь время и пространство. От
+          первых телескопов Галилея<br />
+          до колонизации Марса, от Большого взрыва<br />
+          до темной материи.<br /><br /><br />
+          Музей открыт ежедневно с 09:00 до 22:00.
+        </p>
+      </div>
+      <div class="bttnmain1">
+        <img class="btnmain1" src="img/bt1main (1).png" alt="" />
+      </div>
     </section>
     <section class="imagein1">
       <img
@@ -37,6 +50,11 @@
       <div class="dscrpt1main">
         <p class="decriptmain1-1">Зал «История космонавтики»</p>
       </div>
+    </section>
+
+    <section class="secondmain">
+
+
     </section>
   </body>
 </html>
