--- a/mainpage.html
+++ b/mainpage.html
@@ -52,9 +52,58 @@
       </div>
     </section>
 
-    <section class="secondmain">
+    <section class="mainsecond">
+      <section class="secondmain">
+        <p class="museumtext">МУЗЕЙ</p>
+        <img class="main2-1" src="img/imagemainmuseum.png" alt="" />
+      </section>
+      <section class="museumdescr">
+        <div class="descrmuseum">
+          <p class="museumdecr">
+            Наш музей, где технологии и искусство помогают<br />раскрывать тайны
+            Вселенной, появился в 2023 году,<br />но его история началась
+            гораздо раньше — с мечты.<br /><br />
 
+            Основатели музея, команда учёных, инженеров<br />и энтузиастов
+            космоса, долгое время собирали уникальные<br />экспонаты,
+            разрабатывали образовательные программы<br />и искали способ сделать
+            космос ближе для людей<br />всех возрастов.
+          </p>
+        </div>
+        <div class="museumtextarrow">
+          <p class="more2museum">Подробнее</p>
+          <img class="more2museumarrow" src="img/arrowmain1right.png" alt="" />
+        </div>
+      </section>
+    </section>
 
+    <section class="thirdmain">
+      <section class="constexpotitle">
+        <div class="contexpotitle">
+          <p>
+            Постоянная экспозиция разделена на 4 основные зоны,<br />в которых
+            каждый посетитель сможет ощутить свою индивидуальную<br />связь со
+            Вселенной.
+          </p>
+        </div>
+      </section>
+
+      <section class="postexpo1img">
+        <img
+          src="img/space-exploration-cosmos-shapeship-rocket-engine (1) 1.png"
+          alt=""
+        />
+      </section>
+      <section class="postexpo1text1">
+        <p class="zal1text1">Зал «История космонавтики»</p>
+        <p class="zal1text2">
+          Здесь вы увидите точные копии первых спутников, скафандры
+          легендарных<br />космонавтов и фрагменты метеоритов. Главный экспонат
+          —<br />
+          настоящий двигатель от ракеты «Союз», переданный Роскосмосом.
+        </p>
+      </section>
+      <section class="postexpo1"></section>
     </section>
   </body>
 </html>
